upgrading to java 11. DBZ-1402